--- a/app-folder/public/index.html
+++ b/app-folder/public/index.html
@@ -10,7 +10,7 @@
     />
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&family=RocknRoll+One&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,300&display=swap&family=RocknRoll+One&display=swap" rel="stylesheet"> 
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
